# captain-hooks

./: .cruft.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  meson.build  pylintrc  pyproject.toml  requirements.dev.txt  vulture-false-positives  vulture-false-positives.py
.github/workflows/: auto-author-assign.yml  codeql.yml  coverage.yml  pypi.yml
captain_hooks/: __init__.py  compat.py  meson.build  meson_file_list.py
tests/: test_cli.py  test_meson_file_list.py
